--- a/_content/templates/nav.html
+++ b/_content/templates/nav.html
@@ -1,5 +1,6 @@
 <ul class="main-navigation">
 	<li><a href="{{ site.root }}">Home</a></li>
 	<li><a href="{{ pcurl('blog') }}">Blog</a></li>
+	<li><a href="{{ pcurl('concerten') }}">Concerten</a></li>
 	<li><a href="{{ pcurl('about') }}">About</a></li>
 </ul>
