--- a/_content/templates/post.html
+++ b/_content/templates/post.html
@@ -7,6 +7,14 @@
 			<p class="post-meta">
 				<span class="post-date">{{ page.date }}&nbsp;{{ page.time }}</span>
 				{% if page.author %}<span class="post-author">by {{ page.author }}</span>{% endif %}
+        {% if page.tags %}
+          &mdash;
+          <span class="post-tags">
+            {% for tag in page.tags %}
+            <a href="{{ pctagurl(tag) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}
+            {% endfor %}
+          </span>
+        {% endif %}
 			</p>
 		</header>
 		{{ content|raw }}
