--- a/_content/templates/macros_google.html
+++ b/_content/templates/macros_google.html
@@ -17,3 +17,16 @@
 
 </script>
 {% endmacro %}
+
+{% macro adsense(client, name, slot, width, height) %}
+  <script type="text/javascript"><!--
+      google_ad_client = "{{ client }}";
+      /* {{ name }} */
+      google_ad_slot = "{{ slot }}";
+      google_ad_width = {{ width }};
+      google_ad_height = {{ height }};
+      //-->
+  </script>
+  <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+{% endmacro %}
