--- a/_content/templates/post.html
+++ b/_content/templates/post.html
@@ -1,4 +1,5 @@
 {% extends "default.html" %}
+{% import "macros_social.html" as social %}
 {% import "macros_disqus.html" as disqus %}
 
 {% block content %}
@@ -26,6 +27,9 @@
               {% endif %}
           </p>
           <div class="sharing">
+            {{ social.twitter() }}
+            {{ social.facebook(page.url) }}
+            {{ social.googleplus() }}
           </div>
         </footer>
     </article>
