Added autodiscover rss feed to url

--- a/_content/templates/default.html
+++ b/_content/templates/default.html
@@ -1,4 +1,4 @@
-{% import 'macros_google.html' as google %}
+{% import "macros_google.html" as google %}
 {% import "macros_less.html" as less %}
 {% include "head.html" %}
 <body>
