--- a/_content/templates/nav_concerts.html
+++ b/_content/templates/nav_concerts.html
@@ -1,6 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ site.root }}">Home</a></li>
   <li><a href="{{ pcurl('concerts') }}">Concerts</a></li>
-  <li><a href="{{ pcurl('about') }}">Acts</a></li>
-  <li><a href="{{ pcurl('about') }}">Venues</a></li>
+  <li><a href="{{ pcurl('concerts/acts') }}">Acts</a></li>
+  <li><a href="{{ pcurl('concerts/venues') }}">Venues</a></li>
 </ul>
