Improved the structure of the site

--- a/_content/templates/nav_concerts.html
+++ b/_content/templates/nav_concerts.html
@@ -1,6 +1,7 @@
 <ul class="main-navigation">
-  <li><a href="{{ site.root }}">Home</a></li>
-  <li><a href="{{ pcurl('concerts') }}">Concerts</a></li>
-  <li><a href="{{ pcurl('concerts/acts') }}">Acts</a></li>
-  <li><a href="{{ pcurl('concerts/venues') }}">Venues</a></li>
+  <li><a href="{{ site.root }}">Blog</a></li>
+  <li><a href="{{ pcurl('about') }}">About</a></li>
+  <li><a href="{{ pcurl('concerts') }}">Concerts by date</a></li>
+  <li><a href="{{ pcurl('concerts/acts') }}">Concerts by act</a></li>
+  <li><a href="{{ pcurl('concerts/venues') }}">Concerts by venue</a></li>
 </ul>
