--- a/_content/templates/nav_post.html
+++ b/_content/templates/nav_post.html
@@ -1,6 +1,4 @@
 <ul class="main-navigation">
-  <li><a href="{{ site.root }}">Home</a></li>
-  <li><a href="{{ pcurl('blog') }}">Blog</a></li>
-  <li><a href="{{ pcurl('concerts') }}">Concerts</a></li>
+  <li><a href="{{ site.root }}">Blog</a></li>
   <li><a href="{{ pcurl('about') }}">About</a></li>
 </ul>
