--- a/_content/templates/nav_post.html
+++ b/_content/templates/nav_post.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
   <li><a href="{{ site.root }}">Blog</a></li>
+  <li><a href="{{ pcurl('post/archive') }}">Archive</a></li>
   <li><a href="{{ pcurl('about') }}">About</a></li>
 </ul>
