Created a tag cloud

--- a/_content/templates/default.html
+++ b/_content/templates/default.html
@@ -14,10 +14,8 @@
                 {% endblock %}
             </div>
             <aside class="sidebar">
-                {% include "twitter.html" %}
-                {% block sidebar %}
-                    {% include "sidebar_archive.html" %}
-                {% endblock %}
+                {% include "sidebar_tagcloud.html" %}
+                {% include "sidebar_twitter.html" %}
             </aside>
         </div>
     </div>
