--- a/_content/templates/partial_list.html
+++ b/_content/templates/partial_list.html
@@ -1,7 +1,8 @@
-<header class="list">
+<header>
   <p class="meta">
+    <span class="bull">&bull;</span>
     <span class="post-date">{{ post.date|date("D, d F Y") }}</span>
-    &mdash;
+    &raquo;&nbsp;&nbsp;
     <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
     {% if post.category %}
     <span class="post-date">at <a href="{{ pccaturl(post.category) }}">{{ post.category }}</a></span>
