--- a/css/screen.css
+++ b/css/screen.css
@@ -985,8 +985,18 @@ article {
     padding-top: 1em
 }
 
-article header.list {
-    margin-bottom: 0
+article.list header {
+    margin-bottom: 0;
+    padding-top: 1.2em
+}
+
+article.list header.bull {
+    color: #222
+}
+
+article.list h2 {
+    padding-top: 1.5em;
+    margin-bottom: 0.5em
 }
 
 article header {
@@ -998,8 +1008,9 @@ article header {
 }
 
 @media only screen and (min-width: 768px) {
-    article header.list {
-        margin-bottom: 0
+    article.list header {
+        margin-bottom: 0;
+        color: #222
     }
 
     article header {
