--- a/_content/templates/macros_archive.html
+++ b/_content/templates/macros_archive.html
@@ -1,14 +1,17 @@
 {% macro list(title, blog) %}
   {% set year = -1 %}
-  <article class="list">
-    <h1>{{ title }}</h1>
-    {% for post in blog.posts %}
-      {% if post.date|date("Y") != year %}
-        {% set year = post.date|date("Y") %}
-        {% if not loop.first %}<br>{% endif %}
-        <h2>{{ year }}</h2>
-      {% endif %}
-      {% include "partial_list.html" %}
-    {% endfor %}
+  <article role="article">
+    <header>
+      <h1>{{ title }}</h1>
+    </header>
+    <div id="blog-archives">
+      {% for post in blog.posts %}
+        {% if post.date|date("Y") != year %}
+          {% set year = post.date|date("Y") %}
+          <h1>{{ year }}</h1>
+        {% endif %}
+        {% include "partial_list.html" %}
+      {% endfor %}
+    </div>
   </article>
 {% endmacro %}
