--- a/css/screen.css
+++ b/css/screen.css
@@ -985,34 +985,15 @@ article {
     padding-top: 1em
 }
 
-article.list header {
-    margin-bottom: 0;
-    padding-top: 1.2em
-}
-
-article.list header.bull {
-    color: #222
-}
-
-article.list h2 {
-    padding-top: 1.5em;
-    margin-bottom: 0.5em
-}
-
 article header {
     position: relative;
-    padding-top: 2em;
+    padding-top: 0em;
     padding-bottom: 1em;
     margin-bottom: 1em;
     background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAABCAYAAACsXeyTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAFUlEQVQIHWNIS0sr/v//PwMMDzY+ADqMahlW4J91AAAAAElFTkSuQmCC') bottom left repeat-x
 }
 
 @media only screen and (min-width: 768px) {
-    article.list header {
-        margin-bottom: 0;
-        color: #222
-    }
-
     article header {
         margin-bottom: 1.5em;
         padding-bottom: 1em;
@@ -1033,12 +1014,24 @@ article header p {
 
 article header p.meta {
     position: absolute;
-    top: 0;
-    width: 100%
+    top: 0
 }
 
 article header time {
     text-transform: uppercase
+}
+
+article span.bull {
+    color: #000
+}
+
+article #left {
+    float: left;
+    width: 240px
+}
+
+article #right {
+    margin-left: 240px
 }
 
 article .entry-title {
@@ -1759,7 +1752,8 @@ figure.code .highlight {
 }
 
 #blog-archives {
-    color: #aaa
+    color: #aaa;
+    padding-bottom: 3em
 }
 
 #blog-archives article {
@@ -1833,7 +1827,12 @@ figure.code .highlight {
 }
 
 #blog-archives p {
-    margin-bottom: 1em
+    margin-bottom: 0
+}
+
+#blog-archives h1 {
+    margin-bottom: 0.5em;
+    margin-top: 1em
 }
 
 #blog-archives a:hover {
