Added prettyprint support

--- a/_content/templates/post.html
+++ b/_content/templates/post.html
@@ -43,4 +43,6 @@
         <h1>Comments</h1>
         {{ disqus.commentthread("jqno") }}
     </section>
+
+    <script>prettyPrint();</script>
 {% endblock %}
