--- a/_content/templates/head.html
+++ b/_content/templates/head.html
@@ -15,9 +15,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="{{ site.root }}css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+  <link href="{{ site.root }}css/prettify.css" rel="stylesheet" type="text/css">
   <script src="{{ site.root }}js/modernizr-2.0.js"></script>
   <script src="{{ site.root }}js/ender.js"></script>
   <script src="{{ site.root }}js/octopress.js" type="text/javascript"></script>
+  <script src="{{ site.root }}js/prettify.js"></script>
+  <script src="{{ site.root }}js/lang-scala.js"></script>
   <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
   <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
