--- a/_content/templates/macros_archive.html
+++ b/_content/templates/macros_archive.html
@@ -5,12 +5,11 @@
       <h1>{{ title }}</h1>
     </header>
     <div id="blog-archives">
-      {% for post in blog.posts %}
-        {% if post.date|date("Y") != year %}
-          {% set year = post.date|date("Y") %}
-          <h1>{{ year }}</h1>
-        {% endif %}
-        {% include "partial_list.html" %}
+      {% for year in blog.years %}
+        <h1>{{ year.name }}</h1>
+        {% for post in year.posts %}
+          {% include "partial_list.html" %}
+        {% endfor %}
       {% endfor %}
     </div>
   </article>
