--- a/_content/templates/macros_disqus.html
+++ b/_content/templates/macros_disqus.html
@@ -1,12 +1,12 @@
-{% macro commentthread(siteid, pageurl, pageid, pagetitle) %}
+{% macro commentthread(siteid, pageid, pageurl, pagetitle) %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = '{{ siteid }}';
-    {% if pageurl %}
-    var disqus_url = '{{ pageurl }}';
-    {% endif %}
     {% if pageid %}
     var disqus_identifier = '{{ pageid }}';
+    {% endif %}
+    {% if pageurl %}
+    var disqus_url = '{{ pageurl }}';
     {% endif %}
     {% if pagetitle %}
     var disqus_title = '{{ pagetitle }}';
