--- a/css/screen.css
+++ b/css/screen.css
@@ -2226,10 +2226,6 @@ body>header h2 {
     body>header hgroup {
         text-align:center;
     }
-    /*body>header hgroup {
-        left: -3.7em;
-        width: 22em
-    }*/
 
     body>header h1 {
         padding-bottom: 0
@@ -2249,13 +2245,12 @@ body>header h2 {
     }
 
     body>header h2 {
-        margin: 0 0 .3em;
+        margin: 10px -35px;
         font-family: "PT Sans","Helvetica Neue",Arial,sans-serif;
         font-size: 1.2em;
         color: #bac7da;
         position: relative;
-        left: -1.6em;
-        top: 0;
+        float: right;
         text-shadow: #263347 0 1px 1px
     }
 }
