--- a/_content/templates/macros_feed.xml
+++ b/_content/templates/macros_feed.xml
@@ -6,8 +6,13 @@
   {% endif %}
 {% endmacro %}
 
-{% macro rss(site, blog) %}
+{% macro rss(site, blog, feed_description, name) %}
 <?xml version="1.0" encoding="UTF-8"?>
+{% if name %}
+  {% set feed_title = site.title ~ " - " ~ name %}
+{% else %}
+  {% set feed_title = site.title %}
+{% endif %}
 <rss
   xmlns:content="http://purl.org/rss/1.0/modules/content/"
   xmlns:wfw="http://wellformedweb.org/CommentAPI/"
@@ -17,8 +22,8 @@
   xmlns:slash="http://purl.org/rss/1.0/modules/slash/"
   version="2.0">
   <channel>
-    <title>{{ site.title }}</title>
-    <description>{{ site.title }}</description>
+    <title>{{ feed_title }}</title>
+    <description>{{ feed_description }}</description>
     <link>{{ site.root }}</link>
     <lastBuildDate></lastBuildDate>
     <generator>PieCrust</generator>
