--- a/_content/templates/macros_media.html
+++ b/_content/templates/macros_media.html
@@ -1,3 +1,9 @@
-{% macro slideshow(user_id, album_id, authkey) %}
+{% macro picasa(user_id, album_id, authkey) %}
 <embed type="application/x-shockwave-flash" src="https://picasaweb.google.com/s/c/bin/slideshow.swf" width="600" height="400" flashvars="host=picasaweb.google.com&captions=1&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F{{ user_id }}%2Falbumid%2F{{ album_id }}%3Falt%3Drss%26kind%3Dphoto%26authkey%3D{{ authkey }}%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+{% endmacro %}
+
+{% macro youtube(ids) %}
+{% for id in ids %}
+  <iframe width="420" height="315" src="http://www.youtube.com/embed/{{ id }}" frameborder="0" allowfullscreen></iframe>
+{% endfor %}
 {% endmacro %}
