Small layout fix

--- a/_content/templates/post.html
+++ b/_content/templates/post.html
@@ -27,7 +27,7 @@
           <p class="meta">
               Posted by <span class="author">{{ site.author }}</span>
               &mdash;
-              <span class="date">{{ page.date }}&nbsp;{{ page.time }}</span>
+              <span class="date">{{ page.date }}</span>
               {% if page.category %}
                   &mdash;
                   <span class="post-category">
