--- a/_content/templates/sidebar_twitter.html
+++ b/_content/templates/sidebar_twitter.html
@@ -9,7 +9,7 @@
       getTwitterFeed("{{site.twitter_handle}}", 5, false);
     });
   </script>
-  <script src="{{ root_url }}/js/twitter.js" type="text/javascript"> </script>
+  <script src="{{ site.root }}/js/twitter.js" type="text/javascript"> </script>
   {% if site.twitter_follow %}
     <a href="http://twitter.com/{{ site.twitter_handle }}" class="twitter-follow-button" data-show-count="true">Follow @{{ site.twitter_handle }}</a>
   {% else %}
