Added an about-bit on the sidebar

--- a/_content/templates/default.html
+++ b/_content/templates/default.html
@@ -14,6 +14,7 @@
         {% endblock %}
       </div>
       <aside class="sidebar">
+        {% include "sidebar_about.html" %}
         {% include "sidebar_tagcloud.html" %}
         {% include "sidebar_twitter.html" %}
       </aside>
