--- a/_content/templates/default.html
+++ b/_content/templates/default.html
@@ -3,7 +3,10 @@
 {% include "head.html" %}
 <body>
   <header role="banner">{% include "header.html" %}</header>
-  <nav role="navigation">{% include "nav_" ~ page.blog ~ ".html" %}</nav>
+  <nav role="navigation">
+    {% include "nav_" ~ page.blog ~ ".html" %}
+    {% include "nav_feed.html" %}
+  </nav>
   <div id="main">
     <div id="content">
       <div class="blog-index">
