--- a/_content/templates/nav_feed.html
+++ b/_content/templates/nav_feed.html
@@ -1,3 +1,4 @@
+{% import "macros_feed.xml" as feed %}
 <div class="subscribe">
-    <a href="http://feeds.feedburner.com/trouwens"><img src="{{ site.root }}images/rss.png">&nbsp;Subscribe to feed</a>
+    <a href="{{ feed.url(page.blog, post.feed_url) }}"><img src="{{ site.root }}images/rss.png">&nbsp;Subscribe to feed</a>
 </div>
