--- a/_content/templates/head.html
+++ b/_content/templates/head.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>{{ site.title }}{% if page.title is not empty %} &mdash; {{ page.title }}{% endif %}</title>
   <meta name="author" content="{{ site.author }}">
-  <meta name="description" content="{{ site.description }}" />
+  <meta name="description" content="{{ site.meta_description }}" />
 
   <!-- http://t.co/dKP3o1e -->
   <meta name="HandheldFriendly" content="True">
