What I thought was an error in my code, was actually a small bug in PieCrust. It's fixed now.

--- a/site/_content/templates/sidebar_tagcloud.html
+++ b/site/_content/templates/sidebar_tagcloud.html
@@ -16,9 +16,9 @@
       {% set element = "130%" %}
     {% endif %}
     {% if type == "tag" %}
-      {% set url = pctagurl(tag.name) %}
+      {% set url = pctagurl(tag) %}
     {% elseif type == "cat" %}
-      {% set url = pccaturl(tag.name) %}
+      {% set url = pccaturl(tag) %}
     {% endif %}
     <span style="font-size: {{ element }}"><a href="{{ url }}">{{ tag }}</a>&nbsp;({{ c }})</span>
   {% endfor %}
