Restructured templates to prepare for new equalsverifier pages

--- a/site/_content/templates/blog.html
+++ b/site/_content/templates/blog.html
@@ -1,9 +1,6 @@
-{% extends "default.html" %}
+{% extends "default_mainsite.html" %}
 
 {% block content %}
-
 {{ content|raw }}
-
 <script>prettyPrint();</script>
-
 {% endblock %}
