--- a/site/_content/templates/post.html
+++ b/site/_content/templates/post.html
@@ -1,4 +1,5 @@
-{% extends "default.html" %}
+{% extends "default_mainsite.html" %}
+
 {% import "macros_social.html" as social %}
 {% import "macros_disqus.html" as disqus %}
 {% import "macros_media.html" as media %}
