Sane and consistent date formats

--- a/site/_content/templates/partial_list.html
+++ b/site/_content/templates/partial_list.html
@@ -1,7 +1,7 @@
 <div>
   <div id="left">
     <span class="bull">&bull;</span>
-    <span class="post-date">{{ post.date|date("D, d F Y") }}</span>
+    <span class="post-date">{{ post.date|date("j F Y") }}</span>
     &raquo;
   </div>
   <div id="right">
