--- a/site/_content/templates/post.html
+++ b/site/_content/templates/post.html
@@ -9,7 +9,7 @@
   <header>
     <h1 class="entry-title">{{ page.title }}</h1>
     <p class="post-meta">
-      <span class="post-date">{{ page.date }}</span>
+      <span class="post-date">{{ page.date|date("j F Y") }}</span>
       {% if page.category %}
       <span class="post-category">at {{ page.category }}</span>
       {% else %}
@@ -28,7 +28,7 @@
     <p class="meta">
       Posted by <span class="author">{{ site.author }}</span>
       &mdash;
-      <span class="date">{{ page.date }}</span>
+      <span class="date">{{ page.date|date("j F Y") }}</span>
       {% if page.category %}
         &mdash;
         <span class="post-category">
