Added EqualsVerifier pages

--- a/site/_content/templates/nav_post.html
+++ b/site/_content/templates/nav_post.html
@@ -1,5 +1,6 @@
 <ul class="main-navigation">
   <li><a href="{{ site.root }}">Blog</a></li>
+  <li><a href="{{ pcurl('equalsverifier') }}">EqualsVerifier</a></li>
   <li><a href="{{ pcurl('post/archive') }}">Archive</a></li>
   <li><a href="{{ pcurl('about') }}">About</a></li>
 </ul>
