--- a/site/_content/templates/head.html
+++ b/site/_content/templates/head.html
@@ -1,11 +1,12 @@
 {% import "macros_feed.xml" as feed %}
+{% import "macros_identity.html" as identity %}
 <!DOCTYPE html>
 <!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
 <!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
 <!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>{{ site.title }}{% if page.title is not empty %} &mdash; {{ page.title }}{% endif %}</title>
+  <title>{{ identity.title(page.layout, site.title) }}{% if page.title is not empty %} &mdash; {{ page.title }}{% endif %}</title>
   <meta name="author" content="{{ site.author }}">
   <meta name="description" content="{{ site.meta_description }}" />
 
