--- a/site/_content/templates/equalsverifier.html
+++ b/site/_content/templates/equalsverifier.html
@@ -32,3 +32,7 @@
 {% include "sidebar_twitter.html" %}
 {% endblock %}
 
+{% block appendix %}
+<style type="text/css">body>header hgroup { padding-right: 45px; }</style>
+<a href="https://github.com/jqno/equalsverifier"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+{% endblock %}
