Updated the about pages

--- a/site/_content/templates/sidebar_about.html
+++ b/site/_content/templates/sidebar_about.html
@@ -1,7 +1,6 @@
 <section>
   <h1>About</h1>
   <img style="float: left; margin-right: 5px" src="http://www.gravatar.com/avatar/f2e0574e5b5e770b5c5678b91ba889a6">
-  I'm Jan Ouwens, a programmer from the Netherlands. Sometimes, I like to blog about things.
-  <br>[ <a href="{{ pcurl('about') }}">More about me</a> ]
+  I am <a href="{{ pcurl('about') }}">Jan Ouwens</a>, a software developer from the Netherlands and the creator of <a href="{{ pcurl('equalsverifier') }}">EqualsVerifier</a>.
   <div style="clear: left"></div>
 </section>
