--- a/site/_content/templates/equalsverifier.html
+++ b/site/_content/templates/equalsverifier.html
@@ -29,6 +29,7 @@
 
 {% block sidebar %}
 {% include "sidebar_about.html" %}
+{% include "sidebar_about_equalsverifier.html" %}
 {% include "sidebar_twitter.html" %}
 {% endblock %}
 
