--- a/site/_content/templates/equalsverifier.html
+++ b/site/_content/templates/equalsverifier.html
@@ -1,5 +1,7 @@
 {% extends "default.html" %}
 
+{% block home_url %}{{ pcurl('equalsverifier') }}{% endblock %}
+
 {% block navigation %}
 {% include "nav_equalsverifier.html" %}
 {% include "nav_feed.html" %}
