--- a/site/_content/templates/nav_feed.html
+++ b/site/_content/templates/nav_feed.html
@@ -1,4 +1,4 @@
 {% import "macros_feed.xml" as feed %}
 <div class="subscribe">
-    <a href="{{ feed.url(page.blog, post.feed_url) }}"><img src="{{ site.root }}images/rss.png">&nbsp;Subscribe to feed</a>
+    <a href="{{ feed.url(blogs, page) }}"><img src="{{ site.root }}images/rss.png">&nbsp;Subscribe to feed</a>
 </div>
