--- a/site/_content/templates/sidebar_tagcloud.html
+++ b/site/_content/templates/sidebar_tagcloud.html
@@ -1,9 +1,3 @@
-{% if page.blog == "concerts" %}
-  {% set current_blog = concerts %}
-{% else %}
-  {% set current_blog = post %}
-{% endif %}
-
 {% macro cloud(type, collection, lower_threshold, upper_threshold) %}
   <div style="text-align: justify">
   {% for tag in collection %}
@@ -28,8 +22,8 @@
 {% import _self as s %}
 <section>
   <h1>Tags</h1>
-  {{ s.cloud("tag", current_blog.tags, current_blog.tagcloud_lower, current_blog.tagcloud_upper) }}
+  {{ s.cloud("tag", _context[page.blog].tags, blogs[page.blog].tagcloud_lower, blogs[page.blog].tagcloud_upper) }}
 </section>
 <section>
-  {{ s.cloud("cat", current_blog.categories, current_blog.catcloud_lower, current_blog.catcloud_upper) }}
+  {{ s.cloud("cat", _context[page.blog].categories, blogs[page.blog].catcloud_lower, blogs[page.blog].catcloud_upper) }}
 </section>
