Made About sidebars consistent

--- a/site/_content/templates/sidebar_about_equalsverifier.html
+++ b/site/_content/templates/sidebar_about_equalsverifier.html
@@ -1,4 +1,4 @@
 <section>
-  <h1>EqualsVerifier</h1>
+  <h1>About EqualsVerifier</h1>
   EqualsVerifier is a Java tool that can be used in unit tests. It verifies whether the contract for the <tt>equals</tt> and <tt>hashCode</tt> methods is met.
 </section>
